upd FinnhubClient: - remove unused methods; - optimize filtering;